Revision history for {{$dist->name}}

{{$NEXT}}

0.11      2015-09-14 05:21:12 -0400
  - Fix for helper, which was incorrectly expecting to be
    called as a class method (eserte++ for reporting GH#1).

0.10      2015-07-13 07:33:41 -0400
  - Update meta to reflect ownership by Alien::Base team

0.09      2015-07-13 07:31:37 -0400
  - Provide %{gmake} helper
  - Require Alien::Base 0.020

0.08      2015-04-22 11:40:06 -0400
  - Require Alien::Base 0.016 (needed for alien_stage_install)

0.07      2015-04-22 11:23:26 -0400
  - use alien_stage_install

0.06      2015-01-23 08:02:18 -0500
  - fix syntax error
  - remove some core libs as explicit prereqs

0.05      2014-10-14 08:03:07 -0400
  - fix regression in source code build 0.04

0.04      2014-10-14 07:33:08 -0400
  - use Alien::Base 0.006

0.03      2014-09-24 13:41:22 -0400
  - first CPAN release

0.02      2014-09-24 13:33:45 -0400
  - fixed dependency

0.01      2014-09-24 13:29:15 -0400
  - initial version