@@ -6,12 +6,18 @@ copyright_year   = 2014
 version          = 0.11
 
 [@Author::Plicease]
-:version      = 1.94
-release_tests = 1
-travis_status = 1
-installer     = ModuleBuild
-github_user   = Perl5-Alien
-irc           = irc://irc.perl.org/#native
+:version              = 1.97
+release_tests         = 1
+travis_status         = 1
+installer             = Alien
+github_user           = Perl5-Alien
+irc                   = irc://irc.perl.org/#native
+alien_name            = gmake
+alien_stage_install   = 1
+alien_build_command   = %c --prefix=%s --program-prefix=g
+alien_install_command = make install
+alien_repo            = http://ftp.gnu.org/gnu/make
+alien_pattern         = ^make-.*\.tar\.gz$
 
 [RemovePrereqs]
 remove = strict
