@@ -8,31 +8,6 @@ use Config;
 use File::Temp qw( tempdir );
 use File::chdir;
 
-sub new
-{
-  my($class, %args) = @_;
-  
-  $args{alien_name} = 'gmake';
-  $args{alien_stage_install} = 1;
-  $args{alien_build_commands} = [
-    '%c --prefix=%s --program-prefix=g',
-    "make",
-  ];
-  $args{alien_install_commands} = [
-    "make install",
-  ];
-  $args{alien_repository} = {
-    protocol => 'http',
-    host     => 'ftp.gnu.org',
-    location => "/gnu/make/",
-    pattern  => qr{^make-.*\.tar\.gz$},
-  };
-  
-  my $self = $class->SUPER::new(%args);
-  
-  $self;
-}
-
 sub alien_check_installed_version
 {
   my($self) = @_;
