@@ -13,9 +13,11 @@ $modules{$_} = $_ for qw(
   Alien::Base
   Alien::Base::ModuleBuild
   Capture::Tiny
+  File::ShareDir
   File::chdir
-  Module::Build
+  Test::Alien
   Test::More
+  Test::Stream
 );
 
 
